syntax = "proto2";

package com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto;

option java_package = "com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto";
option java_outer_classname = "LibraryProto";

import "File.proto";

message Library {
    optional string artifact_address = 1; // required
}

message AndroidLibrary {
    optional Library library = 1; // inheritance emulation -> required
    optional File artifact = 2; // required
    repeated File local_jars = 3;
    optional File bundle_folder = 4; // required
}

message JavaLibrary {
    optional Library library = 1; // inheritance emulation -> required
    optional File artifact = 2; // required
}

message ModuleDependency {
    optional Library library = 1; // inheritance emulation -> required
    optional string build_id = 2; // required
    optional string project_path = 3; // required
    optional string variant = 4; // required
}

message NativeLibrary {
    optional Library library = 1; // inheritance emulation -> required
    optional string abi = 2; // required
    optional string toolchain_name = 3; // required
    repeated string c_compiler_flags = 4;
    repeated string cpp_compiler_flags = 5;
    repeated File debuggable_library_folders = 6;
}

// Libraries are splitted by type because proto doesn't support inheritance
message GlobalLibraryMap {
    map<string, AndroidLibrary> android_libraries = 1;
    map<string, JavaLibrary> java_libraries = 2;
    map<string, NativeLibrary> native_libraries = 3;
    map<string, ModuleDependency> module_dependencies = 4;
}
